--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,39 @@
 .light-gray-panel {
-	background-color: #d3d3d3;
+  background-color: #d3d3d3;
 }
 
 .light-cyan-panel {
-	background-color: #cafdff;
+  background-color: #cafdff;
 }
 
 .light-green-panel {
-	background-color: #98e295;
+  background-color: #98e295;
 }
 
 .light-yellow-panel {
-	background-color: #f9fdc6;
+  background-color: #f9fdc6;
 }
 
 .light-red-panel {
-	background-color: #f8b6b6;
+  background-color: #f8b6b6;
+}
+
+.green-dropdown-panel {
+  position: relative;
+  background-color: #2e9c32;
+  min-width: 160px;
+  max-width: 300px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.green-dropdown-panel a {
+  display: block;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+}
+
+.green-dropdown-panel a:hover {
+  background-color: #257528;
 }
